--- a/manuscripts/23-tutorial-don-dags/causal-tutorial-env.qmd
+++ b/manuscripts/23-tutorial-don-dags/causal-tutorial-env.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Causal Inference in Environmental Psychology"
 abstract: |
-  This chapter offers an introduction to causal inference within environmental psychology, emphasising the use of causal diagrams (Directed Acyclic Graphs — DAGs) to evaluate strategies for confounding control. It is structured into four sections: (1) a primer on principles of causal inference, (2) a tutorial on constructing causal diagrams, (3) practical examples of their application, and (4) guidelines for effective reporting. In settings where the structure of confounding is unclear or contested, we recommend creating multiple causal diagrams and performing corresponding analyses. That is, we recommend presenting a spectrum of results linked to each credible causal diagram.
+  This chapter offers an introduction to causal inference within environmental psychology, emphasising the use of causal Directed Acyclic Graphs (causal DAGs) for identifying causation in observational data. It is structured into four sections: (1) a primer on principles of causal inference, (2) a tutorial on constructing causal diagrams, (3) practical examples of their application, and (4) guidelines for effective reporting. In settings where the structure of confounding is unclear or contested, we recommend creating multiple causal diagrams and performing analyses corresponding to each, as well as reporting sensitivity analysis. 
 authors: 
   - name: Joseph A Bulbulia
     orcid: 0000-0002-5861-2056
@@ -109,7 +109,7 @@ push_mods <-
 
 Causal inference seeks to answer the question: How does intervening on a "treatment" variable affect an "outcome" variable? Although causal understanding is widespread across species [@mancuso2018revolutionary], methods for systematically quantitatively magnitudes of causal effect are relatively recent developments.
 
-Randomised controlled experiments, considered the "gold standard" for measuring causal effects, face limitations related to cost, practicality, ethics, and potential biases [@hernan2017per; @montgomery2018]. Observational data, which are more readily available, offer alternatives -- provided that the causal inferences we draw from observational data are valid. Regrettably, however, the practice of analysing observational data and reporting associations without adequately addressing confounding biases is misleading [@westreich2013; @robins1986; @hernan2023]. Widespread practices of analysing observational data and reporting correlations as hinting at causality, yet without adequately controlling for these biases, are misleading [@bulbulia2023a]. Converging advances in causal inference from biostatistics, economomics, and computer science allow us to leverage observational data to better ask, and answer, causal questions [@hernan2023]. This chapter provides and overview of these methods and their applications for environmental psychology.
+Although randomised controlled trials (experiments), when performed correctly, ensure no unmeasured confounding, experiments face limitations of cost, practicality, ethics, and generalisability. Experiments are also subject to confounding biases [@hernan2017per; @montgomery2018; @bulbulia_2024_experiments]. Observational data, which are more readily available, offer alternatives -- provided that the causal inferences we draw are valid. Regrettably, however, the practice of analysing observational data and reporting associations without adequately addressing confounding biases is misleading [@westreich2013; @robins1986; @hernan2023]. Widespread practices of analysing observational data and reporting correlations as hinting at causality, yet without adequately controlling for these biases, are misleading [@bulbulia2023a]. Converging advances in causal inference from biostatistics, economomics, and computer science allow us to leverage observational data to better ask, and answer, causal questions [@hernan2023]. This chapter provides and overview of these methods and their applications for environmental psychology.
 
 [**Part 1**](#section-part1) introduces the potential outcomes framework and the [**three fundamental assumptions**](#sec-three-fundamental-assumptions) necessary for causal inferences [@hernan2023]. Here, we discover that causal inference hinges on our ability to use data to compute contrasts between *counterfactual* outcomes [@westreich2012berkson; @hernan2017per; @westreich2015; @robins2008estimation].
 
@@ -303,9 +303,9 @@ Denoted as $A \coprod B$, signifying that the probability distributions of $A$ a
 A path is considered "blocked" when a node on this path prevents causal influence from propagating between variables. D-separation occurs when all paths between two variables are blocked ($A \coprod B$), indicating no direct statistical association between them. This condition is crucial for enabling unbiased causal inference.
 
 
-#### Open Paths & D-connection
+#### Open Paths
 
-If at least one path between variables remains unblocked, allowing for the transmission of causal influence, the variables are considered d-connected ($A \cancel\coprod B$). This condition suggests a statistical association, warranting further analysis to understand the nature of the bias in the statistical association between the treatment and outcome.
+If at least one path between variables remains unblocked, allowing for the transmission of association, even in the absence of causation ($A \cancel\coprod B$).
 
 
 ### The Five Elementary Graphical Structures of Causality and Four Rules for Confounding Control {#sec-five-elementary}
