--- a/manuscripts/24-jb-dags/24-jb-experiments.qmd
+++ b/manuscripts/24-jb-dags/24-jb-experiments.qmd
@@ -2,7 +2,6 @@
 title: 'Confounding in Experiments'
 abstract: |
   Confounding bias arises when a treatment and outcome share a common cause. In randomised controlled trials, treatment assignment is random, ostensibly eliminating confounding bias. Here, we use causal directed acyclic graphs to unveil eight structural sources of bias that nevertheless persist in these trials. This analysis highlights the crucial role of causal inference methods in the design and analysis of experiments, ensuring the validity of conclusions drawn from experimental data.
-
   **Keywords:** *Causal Inference*; *Experiments*; *DAGs*; *Evolution*; *Per Protocol Effect*; *Intention to Treat Effect*
 author: 
   - name: Joseph A. Bulbulia
@@ -93,8 +92,21 @@ library('tinytex')
 library('extrafont')
 library('tidyverse')
 library('kableExtra')
+# Define a function to check if a package is installed and install it if necessary
+# install_if_needed <- function(pkg) {
+#   if (!require(pkg, character.only = TRUE)) {
+#     install.packages(pkg, dependencies = TRUE)
+#     library(pkg, character.only = TRUE)
+#   }
+# }
+
+# # List of required packages
+# packages <- c("tinytex", "extrafont", "tidyverse", "kableExtra")
+
+# # Install and load the required packages
+# lapply(packages, install_if_needed)
 #devtools::install_github('go-bayes/margot')
-library(margot)
+#library(margot)
 loadfonts(device = 'all')
 ```
 
