--- a/manuscripts/24-jb-dags/24-jb-experiments.tex
+++ b/manuscripts/24-jb-dags/24-jb-experiments.tex
@@ -210,7 +210,7 @@
       
 
 
-\date{2024-05-27}
+\date{2024-06-03}
 \begin{document}
 \maketitle
 \begin{abstract}
@@ -221,11 +221,9 @@ acyclic graphs to unveil eight structural sources of bias that
 nevertheless persist in these trials. This analysis highlights the
 crucial role of causal inference methods in the design and analysis of
 experiments, ensuring the validity of conclusions drawn from
-experimental data.
-
-\textbf{Keywords:} \emph{Causal Inference}; \emph{Experiments};
-\emph{DAGs}; \emph{Evolution}; \emph{Per Protocol Effect};
-\emph{Intention to Treat Effect}
+experimental data. \textbf{Keywords:} \emph{Causal Inference};
+\emph{Experiments}; \emph{DAGs}; \emph{Evolution}; \emph{Per Protocol
+Effect}; \emph{Intention to Treat Effect}
 \end{abstract}
 
 \subsection{Introduction}\label{introduction}
