--- a/manuscripts/24-jb-dags/24-jb-swigs.tex
+++ b/manuscripts/24-jb-dags/24-jb-swigs.tex
@@ -211,7 +211,7 @@ Analysis of Time-Varying Treatments}
       
 
 
-\date{2024-05-28}
+\date{2024-06-03}
 \begin{document}
 \maketitle
 \begin{abstract}
@@ -229,10 +229,8 @@ of interest when there are multiple treatments. By framing and
 addressing causal questions of interaction, mediation, and time-varying
 treatments properly, we can expose the limitations of popular methods
 and guide researchers to a clearer understanding of the phenomena that
-animate our interests.
-
-\textbf{KEYWORDS}: \emph{Causal Inference}; \emph{DAGs};
-\emph{Evolution}; \emph{Mediation}; \emph{Moderation};
+animate our interests. \textbf{KEYWORDS}: \emph{Causal Inference};
+\emph{DAGs}; \emph{Evolution}; \emph{Mediation}; \emph{Moderation};
 \emph{Longitudinal Growth}; Single World Intervention Graphs,
 \emph{SWIGs}; \emph{Time-varying Treatments}
 \end{abstract}
@@ -1921,10 +1919,10 @@ general account of causality by referencing counterfactuals: `\ldots{}
 where, if the first object had not been, the second never would have
 existed' (\citeproc{ref-hume1902}{Hume 1902}). However, it was not until
 Jerzy Neyman's master's thesis that a quantitative analysis of causality
-was formalised (\citeproc{ref-neyman1923}{Splawa-Neyman \emph{et al.}
-1990}). Remarkably, Neyman's work went largely unnoticed until the
-1970s, when Harvard statistician Donald Rubin formalised what became
-known as the `Rubin Causal Model' (also the Rubin-Neyman Causal Model)
+was formalised (\citeproc{ref-neyman1923}{Splawa-Neyman 1990}).
+Remarkably, Neyman's work went largely unnoticed until the 1970s, when
+Harvard statistician Donald Rubin formalised what became known as the
+`Rubin Causal Model' (also the Rubin-Neyman Causal Model)
 (\citeproc{ref-holland1986}{Holland 1986};
 \citeproc{ref-rubin1976}{Rubin 1976}).
 
@@ -2427,9 +2425,9 @@ counterfactual systems and causal graphical models. In
 813--852.
 
 \bibitem[\citeproctext]{ref-neyman1923}
-Splawa-Neyman, J, Dabrowska, DM, and Speed, TP (1990) On the application
-of probability theory to agricultural experiments. Essay on principles.
-Section 9. \emph{Statistical Science}, 465--472.
+Splawa-Neyman (1990) On the application of probability theory to
+agricultural experiments. Essay on principles. Section 9. \emph{English
+Translation with Discussion, Statistical Science}, 463--480.
 
 \bibitem[\citeproctext]{ref-steen2017}
 Steen, J, Loeys, T, Moerkerke, B, and Vansteelandt, S (2017) Medflex: An
