--- a/manuscripts/24-rc-forgive/24-rc-forgive-flourish.qmd
+++ b/manuscripts/24-rc-forgive/24-rc-forgive-flourish.qmd
@@ -2,7 +2,6 @@
 title: "Causal Effects of Forgiveness on Outcomewide Flourishing: Evidence From a National Panel in New Zealand"
 abstract: |
  We investigate the causal effects of forgiveness interventions on multidimensional well-being in a longitudinal study of 33,198 New Zealanders (years 2018 to 2021). We ask two causal questions: (1) What would be the effects across multi-dimensional well-being if everyone with below-average forgiveness were elevated to average levels? (2) What would be the effects on multi-dimensional well-being if everyone were increased by one point on a 1-7 Likert scale for forgiveness? We discover reliable improvements across all well-being dimensions for both interventions, with the general plus-one intervention yielding more substantial effects. Notably, the most pronounced benefits were observed in ego-related well-being, underscoring the considerable personal benefits of forgiving others.
-
    **KEYWORDS**: *Causal Inference*; *Longitudinal*; *Religion*; *Targeted Learning*; *TMLE*; *Flourishing*.
 author: 
   - name: Richard Cowdan
@@ -31,8 +30,6 @@ author:
 editor_options: 
   chunk_output_type: console
 format:
-  docx:
-    bibliography: /Users/joseph/GIT/templates/bib/references.bib
   pdf:
     sanitise: true
     keep-tex: true
@@ -71,7 +68,8 @@ csl: /Users/joseph/GIT/templates/csl/camb-a.csl
 #| echo: false
 #| include: false
 #| eval: true
-
+  # docx:
+  #   bibliography: /Users/joseph/GIT/templates/bib/references.bib
 ## WARNING SET THIS PATH TO YOUR DATA ON YOUR SECURE MACHINE. 
 # pull_path <-
 #   fs::path_expand(
