--- a/manuscripts/24-rc-forgive/24-rc-forgive-flourish.tex
+++ b/manuscripts/24-rc-forgive/24-rc-forgive-flourish.tex
@@ -260,7 +260,7 @@ the Study of Stress, Trauma, and Resilience
       
 
 
-\date{2024-05-10}
+\date{2024-06-04}
 \begin{document}
 \maketitle
 \begin{abstract}
@@ -275,11 +275,9 @@ discover reliable improvements across all well-being dimensions for both
 interventions, with the general plus-one intervention yielding more
 substantial effects. Notably, the most pronounced benefits were observed
 in ego-related well-being, underscoring the considerable personal
-benefits of forgiving others.
-
-\textbf{KEYWORDS}: \emph{Causal Inference}; \emph{Longitudinal};
-\emph{Religion}; \emph{Targeted Learning}; \emph{TMLE};
-\emph{Flourishing}.
+benefits of forgiving others. \textbf{KEYWORDS}: \emph{Causal
+Inference}; \emph{Longitudinal}; \emph{Religion}; \emph{Targeted
+Learning}; \emph{TMLE}; \emph{Flourishing}.
 \end{abstract}
 
 \subsection{Introduction}\label{introduction}
